crates/toml_edit/tests/snapshots/invalid/float/exp-trailing-us.stderr
TOML parse error at line 1, column 23
  |
1 | exp-trailing-us = 1e23_
  |                       ^
`_` may only go between digits, expected nothing
